# vonex

./: .env.sample  .gitignore  README.md  download_images.py  ecosystem.config.js  main.py  pyproject.toml  requirements.txt  test_music_generator.py  voice_recorder.db
.kiro/specs/vonage-voice-recorder/: design.md  requirements.md  tasks.md
docs/: design.md  installation.md  requirements.md  tasks.md
src/: __init__.py  app.py  config.py  models.py  music_generator.py  ncco_builder.py  recording_manager.py  storage.py
tests/: __init__.py  test_app.py  test_config.py  test_ncco_builder.py  test_storage.py
web/: faq.html  index.html  kiyaku.html  pp.html
